[project]
name = "movie_spark_module"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "WhiteCapella", email = "whitecapella.official@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
